adding general dependencies

--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>So Havilah - App</title>
   </head>
   <body>
     <div id="app"></div>
+    <script src="./src/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="./src/assets/js/jqueryui-1.9.2.min.js"></script>
+    <script src="./src/assets/js/bootstrap.min.js"></script>
+    <script src="./src/assets/plugins/easypiechart/jquery.easypiechart.js"></script>
+    <script src="./src/assets/plugins/sparklines/jquery.sparklines.min.js"></script>
+    <script src="./src/assets/plugins/jstree/dist/jstree.min.js"></script>
+    <script src="./src/assets/plugins/codeprettifier/prettify.js"></script>
+    <script src="./src/assets/plugins/bootstrap-switch/bootstrap-switch.js"></script>
+    <script src="./src/assets/plugins/bootstrap-tabdrop/js/bootstrap-tabdrop.js"></script>
+    <script src="./src/assets/plugins/iCheck/icheck.min.js"></script>
+    <script src="./src/assets/js/enquire.min.js"></script>
+    <script src="./src/assets/plugins/bootbox/bootbox.js"></script>
+    <script src="./src/assets/plugins/simpleWeather/jquery.simpleWeather.min.js"></script>
+    <script src="./src/assets/plugins/nanoScroller/js/jquery.nanoscroller.min.js"></script>
+    <script src="./src/assets/plugins/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+
+    <script src="./src/assets/js/application.js"></script>
+    <script src="./src/assets/demo/demo.js"></script>
+    <script src="./src/assets/demo/demo-switcher.js"></script>
+
+    <!-- End loading site level scripts -->
+    
+    <!-- Load page level scripts-->
+    
+<script src="./src/assets/plugins/fullcalendar/fullcalendar.min.js"></script>   				
+<!-- FullCalendar -->
+
+<script src="./src/assets/plugins/wijets/wijets.js"></script>     								<!-- Wijet -->
+
+<script src="./src/assets/plugins/charts-chartistjs/chartist.min.js"></script>               	<!-- Chartist -->
+<script src="./src/assets/plugins/charts-chartistjs/chartist-plugin-tooltip.js"></script>    	<!-- Chartist -->
+
+<script src="./src/assets/plugins/form-daterangepicker/moment.min.js"></script>              	<!-- Moment.js for Date Range Picker -->
+<script src="./src/assets/plugins/form-daterangepicker/daterangepicker.js"></script>     				<!-- Date Range Picker -->
+
+<script src="./src/assets/demo/demo-index.js"></script> 
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
